# introducao-a-redes-neurais

./: .gitignore  Aula_01_Estatística e Probabilidades.md  Aula_01_Medidas de Tendencia Central e Dispersão.md  README.md  machine-learning-com-scikit-learn.md  pyproject.toml
aula1/: aula1-parte2.md
aula4/: mnist.ipynb  problema_xor.ipynb
aula5/: aula5.ipynb  aula5.md
conteudos-extra/: README.md  introducao-ao-numpy-para-processamento-de-tensores.md  machine-learning-com-scikit-learn.md
